style.css
/* ... */
.social-media {
    margin-top: 25px;
    display: flex;
    gap: 10px;
    color:white;
}

.social-media i {
    width: 40px;
}



.phone-details, .email-details {
    display: flex;
    margin-top: 20px;
    font-family: 'Open Sans', sans-serif;
}

.social-media img {
    width: 28px;
}

.part1 .phone-details img, .part1 .email-details img {    
    height: 18px;
    width: 18px;
    margin-right: 10px;
}


.attribution {
    background-color: var(--secondary-first);
    margin: 0 auto;
    background-color: ;
    padding-bottom: 30px;
    font-size: 15px;
    font-weight: var(--level-three);
    font-family: 'Open Sans', sans-serif;
}

.attribution a {
    text-decoration: none;
}

@media only screen 
and (min-width: 320px)
 and (max-width: 640px) {
    
    .container {
        display: flex;
        flex-direction: column;
        /* align-items: center; */
        padding: 20px 0px 0px 0px;
        max-width: 640px;
    }

    header {
        width: 100%;
        padding: 0 20px;
        justify-content: space-between;
    }

    header > button {
        font-family: 'Open Sans', sans-serif;
        font-size: 13px;
        width: 100px;
        height: 25px;
        border-radius: 20px;
        border: 1px solid var(--primary-first);
        background-color: white;
        color: var(--primary-second)
    }

    header > h1 {
        font-size: 28px;
    }

    .logo {
        width: 100px;
        height: 20px;
    }

    .reach {
        flex-direction : column;
        gap: 40px;
        align-items: center;
    }

    .reach-item h1 {
        font-size: 45px;
        font-weight: var(--level-four);
    }

    .reach p {
        font-family: 'Open Sans', sans-serif;
        font-size: 15px;
    }

    .content > button {
        font-family: 'Poppins', sans-serif;
        margin-top: 20px;
        width: 200px;
        height: 40px;
        color: white;
        border-radius: 20px;
        font-size: 15px;
        font-weight: var(--level-three);
        background-color: var(--primary-first);
        border: none;
    }

    .before-footer {
        text-align: center;
    }

    .before-footer h1 {
        font-size: 28px;
    }

    .before-footer > button {
        font-family: 'Poppins', sans-serif;
        margin-top: 20px;
        width: 200px;
        height: 40px;
        color: white;
        border-radius: 20px;
        font-size: 15px;
        font-weight: var(--level-three);
        background-color: var(--primary-first);
        border: none;
    }

    .features {
    padding: 50px 20px;
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    text-align: center;
    }

    .features h1 {
        margin-top: 15px;
    }

    .features p {
        margin-top: 10px;
    }

    .features img {
        margin-top: 10px;
    }

    .features-container {
        order: 2;
    }

    .features2 {
        padding: 70px 0 50px 0;
        background-image: url(images/bg-section-top-mobile-1.svg),
        url(images/bg-section-bottom-mobile-1.svg);
        background-repeat: no-repeat;
        background-position: top, bottom;
        background-size: contain;
    }

    .features4 {
        padding: 60px 0 110px 0;
        background-image: url(images/bg-section-top-mobile-2.svg),
        url(images/bg-section-bottom-mobile-2.svg);
        background-repeat: no-repeat;
        background-position: top, bottom;
        background-size: contain;
    }
    

    footer {
        background-image: url(images/bg-footer-top-mobile.svg);
        margin-top: 60px;
        padding: 50px 0 0 0;
        background-position: top;
        background-size: contain;
    }

    footer .footer-curve {
        margin-top: 0px;
        width: 100%;
        padding: 20px;
        display: flex;
        align-items: unset;
        justify-content: unset;
        flex-direction: column;
        background-color: var(--secondary-first);
    }


    /* footer {
        margin-top: 80px;
        padding-top: 50px;

        background-repeat: no-repeat;
        background-position: top;
        color: white; */
        /* background-image: url(images/bg-footer-top-desktop.svg);
        background-repeat: no-repeat;
        background-position: ; */
    /* } */

    .part1 {
        margin-top: 15px;
        order:  2;
        width: 100%;
        max-width: 640px;
        padding: 0;
    }

    .part1 > .logo {
        width: 180px;
        height: 30px;
    }

    .part1 p {
        font-size: 13px;
    }

    .logo-paragraph {
        margin-top: 25px;
    }

    .phone-details {
        margin-top: 25px;
    }

    .input-details {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 10px;
    }

    button.subscribe-button {
        height: 40px;
    }

    .subscribe-button {
        align-self: flex-end;
    }

    .social-media img {
        width: 30px;
    }



    .part2 {
        order: 1;
        max-width: 640px;
        margin-right: 0px;
    }

    input.subscribe {
    width: 100%;
    height: 40px;
}

.attribution {
    padding-top: 30px;
    font-size: 12px;
}

}

